// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should render grid with custom params 1`] = `
<div>
  <div
    class="ms-Grid"
    dir="ltr"
  >
    <div
      class="ms-Grid-row"
    >
      <div
        class="ms-Grid-col"
      >
        Hello
      </div>
      <div
        class="ms-Grid-col ms-sm12 ms-md8 ms-lg6 ms-xl4 ms-xxl3 ms-xxl2 ms-sm1 ms-md3 ms-lg5 ms-xl7 ms-xxl9 ms-xxl11 ms-sm2 ms-md4 ms-lg6 ms-xl8 ms-xxl10 ms-xxl12 ms-hiddenSm ms-hiddenMd ms-hiddenMdDown ms-hiddenMdUp ms-hiddenLg ms-hiddenLgDown ms-hiddenLgUp ms-hiddenXl ms-hiddenXlDown ms-hiddenXlUp ms-hiddenXxl ms-hiddenXxlDown ms-hiddenXxlUp ms-hiddenXxxl custom-class-name"
      >
        World
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid should render grid with dir: ltr 1`] = `
<div>
  <div
    class="ms-Grid"
    dir="ltr"
  >
    <div
      class="ms-Grid-row"
    >
      <div
        class="ms-Grid-col"
      >
        Hello
      </div>
      <div
        class="ms-Grid-col"
      >
        World
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid should render grid with dir: rtl 1`] = `
<div>
  <div
    class="ms-Grid"
    dir="rtl"
  >
    <div
      class="ms-Grid-row"
    >
      <div
        class="ms-Grid-col"
      >
        Hello
      </div>
      <div
        class="ms-Grid-col"
      >
        World
      </div>
    </div>
  </div>
</div>
`;

exports[`Grid should render grid with dir: undefined 1`] = `
<div>
  <div
    class="ms-Grid"
    dir="ltr"
  >
    <div
      class="ms-Grid-row"
    >
      <div
        class="ms-Grid-col"
      >
        Hello
      </div>
      <div
        class="ms-Grid-col"
      >
        World
      </div>
    </div>
  </div>
</div>
`;
